fix: 3 dots misaligned

--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -308,7 +308,7 @@
 .ige_actions_container {
 	z-index: 2;
 	height: 40px;
-	contain: strict;
+	/*contain: strict; @fixme */
 }
 
 .ige_actions_container > button:first-child {
